Update generate_mobile_android_config.sh